2012-10-10  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): 20121010
	  o protect syntax that only bmake parses correctly.
	  o remove auto setting of FORCE_MACHINE, use configure's
	    --with-force-machine=whatever if that is desired.
	
2012-10-08  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in: do not lose history from make.1 when generating bmake.1

2012-10-07  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): 20121007
	  Merge with NetBSD make, pick up
	  o compat.c: ignore empty commands - same as jobs mode.
	  o make.1: document meta chars that cause use of shell

2012-09-11  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20120911
	* bsd.after-import.mk: include Makefile.inc early and allow it to
	  override PROG

2012-08-31  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20120831
	  Merge with NetBSD make, pick up
	  o cast sizeof() to int for comparison
	  o minor make.1 tweak

2012-08-30  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20120830
	  Merge with NetBSD make, pick up
	  o .MAKE.EXPAND_VARIABLES knob can control default behavior of -V
	  o debug flag -dV causes -V to show raw value regardless.
	
2012-07-05  Simon J. Gerraty  <sjg@bad.crufty.net>

	* bsd.after-import.mk (after-import): ensure unit-tests/Makefile
	  gets SRCTOP set.

2012-07-04  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20120704
	  Merge with NetBSD make, pick up
	  o Job_ParseShell should call Shell_Init if it has been
	    previously called.
	* Makefile.in: set USE_META based on configure result.
	  also .PARSEDIR is safer indicator of bmake.

2012-06-26  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in: bump version to 20120626
	  ensure CPPFLAGS is in CFLAGS
	* meta.c: avoid nested externs
	* bsd.after-import.mk: avoid ${.CURDIR}/Makefile as target
	